deploy-script/k8s/geek-deployment-db.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geek-auth-mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: geek-auth-mongo
    spec:
      containers:
        - name: geek-auth-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: geek-auth-mongo
spec:
  type: NodePort
  ports:
    - port: 27017
      nodePort: 30008
  selector:
    app: geek-auth-mongo
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geek-user-mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: geek-user-mongo
    spec:
      containers:
        - name: geek-user-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: geek-user-mongo
spec:
  type: NodePort
  ports:
    - port: 27017
      nodePort: 30007
  selector:
    app: geek-user-mongo

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geek-task-mysql
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: geek-task-mysql
    spec:
      containers:
        - name: geek-task-mysql
          image: mysql
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
          ports:
            - name: mysql
              containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: geek-task-mysql
  labels:
    name: geek-task-mysql
spec:
  type: NodePort
  ports:
    - port: 3306
      nodePort: 30006
      protocol: TCP
      targetPort: 3306
  selector:
    app: geek-task-mysql
